src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>SBQQ__IncludeInMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Includes products in percent of total calculations that are normally excluded (e.g.: subscription products).</description>
        <inlineHelpText>Check to always include this product in percent of total calculations (normally subscription products are excluded from percent of total calculations).</inlineHelpText>
        <label>Include In Percent Of Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__NewQuoteGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forces this product to be in its own group on a quote.</description>
        <inlineHelpText>Check to create a new quote group when this product is added (unless the current group is empty).</inlineHelpText>
        <label>New Quote Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__NonDiscountable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this product as non discountable.</description>
        <inlineHelpText>Marks this product as not discountable.</inlineHelpText>
        <label>Non Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__NonPartnerDiscountable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this product as non-discountable for partners.</description>
        <inlineHelpText>Check to make this product non-discountable for partners.</inlineHelpText>
        <label>Non Partner Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionLayout__c</fullName>
        <description>Determines how options are presented to users.</description>
        <inlineHelpText>Determines how options are presented to users.</inlineHelpText>
        <label>Option Layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sections</fullName>
                </value>
                <value>
                    <fullName>Tabs</fullName>
                </value>
                <value>
                    <fullName>Wizard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OptionSelectionMethod__c</fullName>
        <description>Determines how user selects options attached to this product. &quot;Click&quot; method presents options with checkboxes next to them. &quot;Add&quot; renders a button which brings up a dialog box with available options.</description>
        <inlineHelpText>Determines how user selects options attached to this product. &quot;Click&quot; method presents options with checkboxes next to them. &quot;Add&quot; renders a button which brings up a dialog box with available options.</inlineHelpText>
        <label>Option Selection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Click</fullName>
                    <default>true</default>
                    <label>Click</label>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this product is optional or not by default. Optional products don&apos;t contribute to quote total or get transferred to the opportunity.</description>
        <inlineHelpText>Select if this product is optional by default. Optional products don&apos;t contribute to quote total or get transferred to the opportunity.</inlineHelpText>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this product allows for price to be freely editable when building a quote</description>
        <inlineHelpText>Indicates this product allows for price to be freely editable when building a quote.</inlineHelpText>
        <label>Price Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingGuidance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pricing guidance for use with this product.</description>
        <inlineHelpText>Pricing guidance for use with this product.</inlineHelpText>
        <label>Pricing Guidance</label>
        <referenceTo>SBQQ__PricingGuidance__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethodEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether Pricing Method may be changed when this product is added to quote.</description>
        <inlineHelpText>Select if Pricing Method can be changed when this product is added to quote.</inlineHelpText>
        <label>Pricing Method Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Pricing method that should be applied to this product.</description>
        <inlineHelpText>Pricing method that should be applied to this product.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProductPictureID__c</fullName>
        <description>ID of Document or Content record that holds the picture for this product.</description>
        <inlineHelpText>ID of Document or Content record that holds the picture for this product.</inlineHelpText>
        <label>Product Picture Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuantityEditable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that determines whether the quantity is editable.</description>
        <inlineHelpText>Allow or prevent changing the quantity for this product.</inlineHelpText>
        <label>Quantity Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuantityScale__c</fullName>
        <description>Specifies the number of decimal places used in the Quantity field.</description>
        <inlineHelpText>Specifies the number of decimal places used in the Quantity field.</inlineHelpText>
        <label>Quantity Scale</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ReconfigurationDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that disables re-configuration of this product.</description>
        <inlineHelpText>When checked this product can only be configured when first added to a quote. If selected, users will not have access to a Configure link on the Edit Lines page after product has been added.</inlineHelpText>
        <label>Disable Reconfiguration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product that replaces this product on renewal.</description>
        <inlineHelpText>Product that replaces this product on renewal. Use this to quote a different SKU when renewing.</inlineHelpText>
        <label>Renewal Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Original Products</relationshipLabel>
        <relationshipName>OriginalProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SortOrder__c</fullName>
        <description>Determines a default sort order of products in the Product Lookup page, and therefore the order in which they are added to the quote.</description>
        <inlineHelpText>Determines a default sort order of products in the Product Lookup page, and therefore the order in which they are added to the quote.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Specifications__c</fullName>
        <description>Formatted specifications for this product for use in quote templates to produce spec sheets.</description>
        <inlineHelpText>Formatted specifications for this product for use in quote templates to produce spec sheets.</inlineHelpText>
        <label>Specifications</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionBase__c</fullName>
        <description>Determines whether dynamic subscriptions are calculated off List or Net product price.</description>
        <inlineHelpText>Determines whether Percent of Total is calculated off List or Net product prices.</inlineHelpText>
        <label>Percent Of Total Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionCategory__c</fullName>
        <description>Subscription category for this product. Applies to all products and used to limit percent of total subscriptions to certain products.</description>
        <inlineHelpText>Use this to limit percent of total calculations to certain product categories. For example, software maintenance should only calculate percentage on products with a software maintenance percent of total category.</inlineHelpText>
        <label>Percent Of Total Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPercent__c</fullName>
        <description>Percent of non-subscription total to be used as the price of this subscription.</description>
        <inlineHelpText>Percent of non-subscription total to be used as the price of this subscription.</inlineHelpText>
        <label>Percent Of Total (%)</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</description>
        <inlineHelpText>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Effective product on which maintenance should calculate.</description>
        <inlineHelpText>Use this field to override a product that is included in a percent of total calculation. Point this lookup to a product with a list price you would like to use for the current product’s Percent of Total calculations.</inlineHelpText>
        <label>Percent Of Total Target</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscription Targeting Products</relationshipLabel>
        <relationshipName>SubscriptionTargetingProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Term length of this subscription. Only applicable if the product is a subscription.</description>
        <inlineHelpText>Term length of this subscription. Only applicable if the product is a subscription.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Renewable Subscriptions will transfer to Renewal Quotes. One-time Subscriptions will not.</description>
        <inlineHelpText>Renewable Subscriptions will transfer to Renewal Quotes. One-time Subscriptions will not.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewable</fullName>
                    <default>true</default>
                    <label>Renewable</label>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
                <value>
                    <fullName>Renewable/Evergreen</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this product is taxable.</description>
        <inlineHelpText>Indicates whether this product is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountLevel__c</fullName>
        <description>Level of subscription term that&apos;s used to calculated term discount.</description>
        <inlineHelpText>Specify subscription term level that should be used in calculating term discount. Leave blank to indicate default.</inlineHelpText>
        <label>Term Discount Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term.</description>
        <inlineHelpText>Schedule for discounts based on subscription term.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Term Discounted Products</relationshipLabel>
        <relationshipName>TermDiscountedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeCredit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credit product quoted when upgrading this product.</description>
        <inlineHelpText>Use to specify credit when quoting upgrades to this product.</inlineHelpText>
        <label>Upgrade Credit</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Credited Products</relationshipLabel>
        <relationshipName>CreditedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeRatio__c</fullName>
        <description>The conversion rate between this upgrade product and its source product.</description>
        <inlineHelpText>The conversion rate between this product&apos;s quantity and that of its source product.</inlineHelpText>
        <label>Upgrade Ratio</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the product being upgraded.</description>
        <inlineHelpText>Product being upgraded. Populating this field makes this product an upgrade.</inlineHelpText>
        <label>Upgrade Source</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Target Upgrades</relationshipLabel>
        <relationshipName>TargetUpgrades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product being upgraded to.</description>
        <inlineHelpText>Specify the upgraded product. Only applicable if this product is an upgrade as indicated by Upgrade Source field being populated or having related Upgrade Source records.</inlineHelpText>
        <label>Upgrade Target</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Source Upgrades</relationshipLabel>
        <relationshipName>SourceUpgrades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBU_Code__c</fullName>
        <label>SBU Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBU_Description__c</fullName>
        <description>This field is a concatenation of SBU + SBU Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</description>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;Global&quot;), SBU_Code__c &amp;&quot; - &quot; &amp; SBU_Name__c, GlobalSKUMapping__r.SBU_Code__c &amp; &quot; - &quot; &amp; GlobalSKUMapping__r.SBU_Name__c)</formula>
        <label>SBU - Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBU_Name__c</fullName>
        <label>SBU Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIMPLANT_Product_Category_HQ__c</fullName>
        <label>SIMPLANT Product Category HQ</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKUKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SKU Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SKU_Source__c</fullName>
        <description>1: LocalSKU not mapped to GPC
2: Available in the GPC
3: LocalSKU not mapped to GPC but available in Movex</description>
        <inlineHelpText>1: LocalSKU not mapped to GPC
2: Available in the GPC
3: LocalSKU not mapped to GPC but available in Movex</inlineHelpText>
        <label>SKU Source</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU_Status__c</fullName>
        <description>1: Active
0: Inactive</description>
        <inlineHelpText>1: Active 
0: Inactive</inlineHelpText>
        <label>SKU Status</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSIS_ERP_SKU_Market_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SSIS: ERP/SKU - Market Mapping</label>
        <referenceTo>SSIS_ERP_SKU_Metadata_Country_Connectio__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServicableItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requires Installation</description>
        <inlineHelpText>to identify if this products Requires Installation</inlineHelpText>
        <label>Servicable Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TariffCode__c</fullName>
        <description>tax code on goods coming into or going out of a country</description>
        <inlineHelpText>tax code on goods coming into or going out of a country</inlineHelpText>
        <label>Tariff Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measurement__c</fullName>
        <description>The unit of Measurement</description>
        <inlineHelpText>The unit of Measurement</inlineHelpText>
        <label>Unit of Measurement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Article__c</columns>
        <columns>Brand__c</columns>
        <columns>Company_Code__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company_Code__c</field>
            <operation>equals</operation>
            <value>US10</value>
        </filters>
        <filters>
            <field>Article__c</field>
            <operation>equals</operation>
            <value>REDLCAB-8</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dental_Products</fullName>
        <columns>Article__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PG1_Code__c</columns>
        <columns>PG1_Desc__c</columns>
        <columns>PG3_Code__c</columns>
        <columns>PG3_Desc__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBU_Code__c</field>
            <operation>equals</operation>
            <value>I</value>
        </filters>
        <label>Implants Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HQ_Equipment_Products</fullName>
        <columns>SBU_Name__c</columns>
        <columns>Article__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>GPP_Desc__c</columns>
        <columns>PG4_Code__c</columns>
        <columns>PG4_Desc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GPP_Code__c</field>
            <operation>equals</operation>
            <value>Al,AC,MA,MB,MI,NH,NL,NP,TC,TE,TF,TS</value>
        </filters>
        <label>HQ: Equipment Products</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Japan_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Article__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_group_description__c</columns>
        <filterScope>Everything</filterScope>
        <label>Japan Products</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <recordTypes>
        <fullName>CategoryProduct</fullName>
        <active>true</active>
        <label>Category Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>GlobalSKU</fullName>
        <active>true</active>
        <label>Global SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>LocalSKU</fullName>
        <active>true</active>
        <label>Local SKU</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Include_or_Exclude_Maintenance</fullName>
        <active>true</active>
        <description>Validates that either Includes In Maintenance or Excludes From Maintenance checkbox is checked but not both.</description>
        <errorConditionFormula>AND(SBQQ__IncludeInMaintenance__c,SBQQ__ExcludeFromMaintenance__c)</errorConditionFormula>
        <errorMessage>You must check either Include In Maintenance or Exclude From Maintenance checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Term_schedule_requires_subscription</fullName>
        <active>true</active>
        <description>Ensures only subscription products have Term Discount Schedule field populated.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;&apos;),NOT(ISBLANK(SBQQ__TermDiscountSchedule__c)))</errorConditionFormula>
        <errorDisplayField>SBQQ__TermDiscountSchedule__c</errorDisplayField>
        <errorMessage>Only subscription products may specify term discount schedule</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is selected as One-Time, Billing Frequency must not be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR( 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))), 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
</CustomObject>